--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Star Wars</ion-title>
+    <ion-title>{{selectedItem.title}}</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -11,16 +11,15 @@
   <ion-grid>
       <ion-row>
           <ion-col col-12>
-              <button ion-item (click)="itemTapped($event, 'Association')">
-                Association
+              <button ion-item>
+                <ion-img width="80" height="80" src="assets/imgs/{{selectedItem.icon}}.png"></ion-img>
               </button>
           </ion-col>
       </ion-row>
       <ion-row>
           <ion-col col-6 *ngFor="let item of items">
               <button ion-item (click)="itemTapped($event, item)">
-                <ion-icon [name]="item.icon" item-start></ion-icon>
-                {{item.title}}
+                <ion-img width="80" height="80" src="assets/imgs/{{item.icon}}.png"></ion-img>
               </button>
           </ion-col>
       </ion-row>
