--- a/src/pages/detail/detail.html
+++ b/src/pages/detail/detail.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title>Item</ion-title>
+        <ion-title>{{selectedItem.title}}</ion-title>
         <ion-buttons start>
             <button ion-button (click)="dismiss()">
                 <span ion-text color="primary" showWhen="ios">Cancel</span>
@@ -15,11 +15,6 @@
         <ion-item>
             <ion-icon [name]="selectedItem.icon" item-start></ion-icon>
             <h2>{{selectedItem.title}}</h2>
-        </ion-item>
-        <ion-item>
-            <ion-note item-end>
-                {{selectedItem.note}}
-            </ion-note>
         </ion-item>
     </ion-list>
 </ion-content>
