Implementation du service provider + appel au WS

--- a/src/pages/association/association.html
+++ b/src/pages/association/association.html
@@ -11,19 +11,16 @@
     <ion-grid>
         <ion-row>
             <ion-col col-12>
-                <ion-img width="180" height="80" src="assets/imgs/association.png"></ion-img>
-            </ion-col>
-            <ion-col col-12>
                 <div class="fade"></div>
                 <section class="star-wars">
                     <div class="crawl">
+                        <ion-img height="250" src="assets/imgs/association.png"></ion-img>
                         <div class="title">
-                            <p>Episode IV</p>
-                            <h1>A New Hope</h1>
+                            <p>L'association</p>
                         </div>
-                        <p>It is a period of civil war. Rebel spaceships, striking from a hidden base, have won their first victory against the evil Galactic Empire.</p>
-                        <p>During the battle, Rebel spies managed to steal secret plans to the Empire’s ultimate weapon, the DEATH STAR, an armored space station with enough power to destroy an entire planet.</p>
-                        <p>Pursued by the Empire’s sinister agents, Princess Leia races home aboard her starship, custodian of the stolen plans that can save her people and restore freedom to the galaxy….</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vulputate placerat euismod. Fusce euismod odio ut interdum lacinia. Ut non lacus eu ante tincidunt ullamcorper non eu lectus. Mauris eget pulvinar tellus. Maecenas ac felis eu magna pharetra aliquam. Duis vel rhoncus ligula. Pellentesque lectus erat, semper non viverra at, accumsan non lorem. Praesent vitae orci et felis euismod tincidunt at sit amet ligula. Sed sapien orci, rhoncus ac imperdiet quis, egestas lacinia neque. Ut bibendum ullamcorper lectus eu dapibus. Nunc et porta dolor, vel luctus sem. Maecenas vehicula molestie nulla, in iaculis ante maximus nec. Integer at lorem quis mauris iaculis rhoncus.</p>
+                        <p>Ut eu neque et sem lobortis suscipit. Proin mollis nulla purus, nec mattis tellus luctus eget. Proin volutpat consectetur pharetra. Fusce sapien lacus, vulputate sit amet pulvinar et, blandit eget urna. Phasellus rhoncus imperdiet ultricies. Ut a elementum eros, quis luctus metus. Proin sodales iaculis lorem convallis lobortis. Phasellus nec suscipit sapien, vitae eleifend lectus.</p>
+                        <p>Vestibulum ut tellus eros. Proin sollicitudin erat tincidunt enim convallis ornare. Suspendisse sed est diam. Proin elementum, urna placerat pulvinar semper, purus massa elementum lectus, sed efficitur lacus enim vel lacus. Vestibulum posuere odio sem, ut condimentum mauris ultricies a. Nullam in magna purus. Suspendisse finibus, turpis non porttitor bibendum, erat quam placerat lorem, tempus rutrum sem nulla eu urna. Donec egestas libero eu ante congue maximus. Integer bibendum arcu diam, sit amet rhoncus nisi elementum nec. Sed et porttitor ante, sit amet porttitor lacus. Praesent quis elit semper, tempus enim vel, blandit risus.</p>
                     </div>
                 </section>
             </ion-col>
