--- a/src/pages/theme/theme.html
+++ b/src/pages/theme/theme.html
@@ -21,6 +21,7 @@
               <button ion-item (click)="itemTapped($event, resource)">
                 <ion-img width="80" height="80" src="assets/imgs/{{resource.icon}}.png"></ion-img>
               </button>
+              <span>{{resource.title}}</span>
           </ion-col>
       </ion-row>
   </ion-grid>
