--- a/src/pages/people/people.html
+++ b/src/pages/people/people.html
@@ -11,10 +11,37 @@
 </ion-header>
 
 <ion-content padding>
-    <ion-list *ngIf="selectedItem">
-        <ion-item>
-            <ion-icon [name]="selectedItem.icon" item-start></ion-icon>
-            <h2>{{selectedItem.title}}</h2>
-        </ion-item>
-    </ion-list>
+    <ion-grid>
+        <ion-row>
+            <ion-col col-12>
+                <ion-img width="120" height="120" src="assets/imgs/{{selectedItem.icon}}.png"></ion-img>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col col-6>
+                <span>Age</span>
+            </ion-col>
+            <ion-col col-6>
+                <span>{{selectedItem.full.birth_year}}</span>
+            </ion-col>
+            <ion-col col-6>
+                <span>Couleur des yeux</span>
+            </ion-col>
+            <ion-col col-6>
+                <span>{{selectedItem.full.eye_color}}</span>
+            </ion-col>
+            <ion-col col-6>
+                <span>Genre</span>
+            </ion-col>
+            <ion-col col-6>
+                <span>{{selectedItem.full.gender}}</span>
+            </ion-col>
+            <ion-col col-6>
+                <span>Poids</span>
+            </ion-col>
+            <ion-col col-6>
+                <span>{{selectedItem.full.mass}} Kg</span>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-content>
