--- a/src/pages/film/film.html
+++ b/src/pages/film/film.html
@@ -14,7 +14,7 @@
         <ion-grid>
             <ion-row>
                 <ion-col col-12>
-                    <ion-img width="120" height="120" src="assets/imgs/{{selectedItem.icon}}.png"></ion-img>
+                    <ion-img width="150" height="150" src="assets/imgs/{{selectedItem.icon}}.png"></ion-img>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -40,7 +40,7 @@
                     <span>Sortie</span>
                 </ion-col>
                 <ion-col col-6>
-                    <span>{{selectedItem.full.release_date}} Kg</span>
+                    <span>{{selectedItem.full.release_date}}</span>
                 </ion-col>
             </ion-row>
         </ion-grid>
