--- a/src/pages/people/people.html
+++ b/src/pages/people/people.html
@@ -14,10 +14,16 @@
     <ion-grid>
         <ion-row>
             <ion-col col-12>
-                <ion-img width="120" height="120" src="assets/imgs/{{selectedItem.icon}}.png"></ion-img>
+                <ion-img width="150" height="150" src="assets/imgs/{{selectedItem.icon}}.png"></ion-img>
             </ion-col>
         </ion-row>
         <ion-row>
+            <ion-col col-6>
+                <span>Nom</span>
+            </ion-col>
+            <ion-col col-6>
+                <span>{{selectedItem.full.name}}</span>
+            </ion-col>
             <ion-col col-6>
                 <span>Age</span>
             </ion-col>
